--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^2.9.4",
+    "ng2-charts": "^2.4.2",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
