--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
+    "ngx-bootstrap": "~9.0.0",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
