--- a/client/angular.json
+++ b/client/angular.json
@@ -28,8 +28,7 @@
               "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "./node_modules/chart.js/dist/Chart.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
             "allowedCommonJsDependencies": [
               "chart.js"
